SD-2028 TNT scenario with flexible query parameter support